[gd_scene load_steps=5 format=2]

[ext_resource path="res://art/freeweapons/spr_wep_steel_holy_0.png" type="Texture" id=1]
[ext_resource path="res://weapons/sword8.gd" type="Script" id=2]
[ext_resource path="res://weapons/swordaea.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21.5942, 5.15485 )

[node name="sword3" type="Sprite" groups=[
"melee",
]]
position = Vector2( 0.0302901, 15.0298 )
rotation = 1.5708
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="." groups=[
"damagebox",
]]
visible = false
position = Vector2( -16.25, -1.62493 )
collision_layer = 32
collision_mask = 32
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 18.2215, 1.65771 )
shape = SubResource( 1 )
disabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Timer2" type="Timer" parent="."]
autostart = true
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
